@@ -12,3 +12,4 @@ v 1.1:
     - Fixed BukkitPerms population. Wasn't correctly setting superperms.
     - Push updates to superperms for all valid GM commands.
     - All GroupManager commands issued by players are now echoed in the console.
+    - Reverted WorldHolder static change to maintain backward plugin compatability.
